fixed color contrast issue

--- a/index.css
+++ b/index.css
@@ -39,8 +39,8 @@ h3 {
 }
 
 h4 {
-  color: red;
-  background-color: lightgray;
+  color: black;
+  background-color: white;
   width: 300px;
   margin-left: auto;
   margin-right: auto;
